--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "native-base": "^2.12.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
@@ -46,5 +47,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets":[
+      "./assets/fonts"
+    ]
   }
 }
