--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "firebase": "^6.3.1",
     "moment": "^2.24.0",
     "native-base": "^2.12.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-linear-gradient": "^2.5.4",
@@ -49,7 +51,7 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets":[
+    "assets": [
       "./assets/fonts"
     ]
   }
