--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "native-base": "^2.12.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-cached-image": "^1.4.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.1.0",
+    "react-native-flexi-radio-button": "^0.2.2",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-google-places-autocomplete": "^1.3.9",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-maps": "^0.25.0",
     "react-native-maps-directions": "^1.7.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.1.0",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-rating": "^2.0.4",
+    "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
